# kameloso

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  flake.nix
.github/workflows/: build.yaml  release.yml  test.yml
public/: index.html
public/static/: main.js  style.css
scripts/: Dockerfile  cross-compile.sh
src/: kopipe.rs  main.rs  mpv_error.rs  mpv_ipc.rs  mpv_reactor.rs  qr.rs  server.rs  server_endpoints.rs  server_hyper.rs  server_state.rs
src/mpv/: client.rs  command.rs  error.rs  message.rs  message_buffer.rs  mod.rs  reactor.rs
