[package]
name = "kameloso"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tide = "0.16.0"
tokio = { version = "1.19.2", features = ["full", "sync"] }
