[package]
name = "kameloso"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crypto = "0.5.1"
env_logger = "0.9.0"
futures = "0.3.28"
local-ip-address = "0.5.3"
log = "0.4.17"
qrcode = { version = "0.12.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
warp = "0.3.3"
